--- a/OTHERS/index.html
+++ b/OTHERS/index.html
@@ -15,9 +15,11 @@
 <p>This XRAY Websocket Lite Autoscript is Free For All!</p>
 
 <p>For Installation Or More Autoscript Please Visit
-<a href="https://github.com/vinstechmy">Vinstechmy-Github</a>.<br/>
+<a href="https://github.com/vinstechmy">Click Me!</a><br/>
 Current Autoscript Using Is
-<a href="https://github.com/vinstechmy/AutoscriptWebsocketLite">XRAY Websocket Lite</a>.</p>
+<a href="https://github.com/vinstechmy/AutoscriptWebsocketLite">Click Me!</a></p>
+For Premium Version RM10/2IP (Lifetime)
+<a href="https://github.com/vinstechmy/MultiportWebsocketPremium">Click Me!</a></p>
 
 <p><em>Thank you for using Vinstechmy XRAY Websocket Lite Autoscript</em></p>
 </body>
