--- a/OTHERS/index.html
+++ b/OTHERS/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Vinstechmy XRAY Websocket Lite Autoscript!</title>
+<title>Welcome to Marfel Store XRAY Websocket Lite Autoscript!</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to Vinstechmy XRAY Websocket Lite Autoscript!</h1>
+<h1>Welcome to Marfel Store XRAY Websocket Lite Autoscript!</h1>
 <p>This XRAY Websocket Lite Autoscript is Free For All!</p>
 
 <p>For Installation Or More Autoscript Please Visit
